--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
-    "redux": "^3.7.0"
+    "redux": "^3.7.1",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
